# analise-dados-teses-dissertacoes

./: pyproject.toml  requirements.txt
notebooks/: 1.obter_catalogos.ipynb  2.limpeza_dados.ipynb  2_limpeza__dados.ipynb
