[tool.poetry]
name = "analise-dados-teses-dissertacoes"
version = "0.1.0"
description = "Analisando resumos das dissertações e teses do Brasil"
authors = ["Jessica Sousa <jessicasousa.pc@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ipykernel = "^6.29.4"
pandas = "^2.2.2"
tqdm = "^4.66.4"
ipywidgets = "^8.1.3"
pyarrow = "^16.1.0"
matplotlib = "^3.9.0"
gensim = "^4.3.2"
seaborn = "^0.13.2"
wordcloud = "^1.9.3"
nltk = "^3.8.1"
scipy = "<1.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
